--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>My Labs</h1>
   <ol>
-    <li><a href="lab01/">Lab 1</a></li>
+    <li><a href="Lab1/">Lab 1</a></li>
     <li><a href="lab02/">Lab 2</a></li>
   </ol>
 </body>
