--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Labs</title>
 </head>
 <body>
   <h1>My Labs</h1>
   <ol>
-    <li><a href="Lab1/">Lab 1</a></li>
+    <li><a href="lab01/">Lab 1</a></li>
     <li><a href="lab02/">Lab 2</a></li>
   </ol>
 </body>
