--- a/lab02/index.html
+++ b/lab02/index.html
@@ -34,10 +34,7 @@
   <p>
     The Black Goose Bistro is a vibrant and welcoming spot that offers a unique dining experience.
     Our casual lunch and dinner fare is served in a hip and trendy atmosphere, perfect for both
-    relaxed meals and special occasions. We pride ourselves on using the freshest ingredients,
-    and our menu changes regularly to reflect the best seasonal produce. Whether you're stopping
-    by for a quick bite or enjoying a leisurely dinner with friends, you'll find something to love
-    at the Black Goose Bistro.
+    relaxed meals and special occasions. 
   </p>
 
   <h2>Signature Dishes</h2>
